--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,6 +24,7 @@
             {%- endif -%}
           {%- endfor -%}
 
+          <a class="page-link" href="/about/">About</a>
           <a class="page-link" href="/irc/">Chat</a>
           <a class="page-link" href="/conference/">Conference</a>
           <a class="page-link" href="http://jobs.code4lib.org">Jobs</a>
