Add CoC link to main navigation
It is important to show that our community has an established Code of Conduct

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,6 +26,7 @@
 
           <a class="page-link" href="/about/">About</a>
           <a class="page-link" href="/irc/">Chat</a>
+          <a class="page-link" href="https://bit.ly/coc4lib">Code of Conduct</a>
           <a class="page-link" href="/conference/">Conference</a>
           <a class="page-link" href="http://jobs.code4lib.org">Jobs</a>
           <a class="page-link" href="https://journal.code4lib.org">Journal</a>
